added source page

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </nav>
 
     <section class="container">
-
         <div class="row">
             <div class="col-md-12 subtitle">
                 <h3 class="georgia"> Choose two news sources to compare how each chooses to deliver news. </h3>
                 <h4 class="georgia"> Only you can sort out the truth!</h4>
+                <a href="source.html" class="hred">View all news sources</a>
             </div>
         </div>
 
