--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </div>
                     <div class="col-md-4">
                         <form class="form" action="">
-                            <select class="select form-control" id="select-one"  value="News Sources"> 
+                            <select class="select form-control" id="select-two"  value="News Sources"> 
                                 <option> Choose your news source</option>
                             </select>
                         </form>
@@ -51,20 +51,26 @@
 
                 <div class="row">
                     <div class="col-md-2">
-                        <h5>TOPIC (optional)</h5>
+                        <h5>TOPIC (optional)</h5> 
                     </div>
-                    <div class="col-md-10">
+                    <div class="col-md-4">
                         <input class="user-input form-control" type="text">
                         <button type="button" id="input-button" class="btn">Submit</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button id="reset" class="btn btn-sm">Reset</button>
+                    </div>
+                    <div class="col-md-4">
+
                     </div>
                 </div>
             </div>
             <div class="row results">
-                <div class="col-md-6 first">
-                   first
+                <div id="first" class="col-md-6">
+                   
                 </div>
 
-                <div class="col-md-6 second">
+                <div id="second" class="col-md-6">
                         second
                 </div>
             </div>
